 * Removed version number from the logo link’s title. The version can now be found under the Settings menu (Thibaud Colas)
 * Added "don't delete" option to confirmation screen when deleting images, documents and modeladmin models (Kevin Howbrook)
 * Added `branding_title` template block for the admin title prefix (Dillen Meijboom)
 * Fix: ModelAdmin no longer fails when filtering over a foreign key relation (Jason Dilworth, Matt Westcott)
 * Fix: The Wagtail version number is now visible within the Settings menu (Kevin Howbrook)
 * Fix: Scaling images now rounds values to an integer so that images render without errors (Adrian Brunyate)
 * Fix: Revised test decorator to ensure TestPageEditHandlers test cases run correctly (Alex Tomkins)
 * Fix: Wagtail bird animation in admin now ends correctly on all browsers (Deniz Dogan)
 * Fix: Explorer menu no longer shows sibling pages for which the user does not have access (Mike Hearn)
 * Fix: Fixed occurences of invalid HTML across the CMS admin (Thibaud Colas)
 * Fix: Admin HTML now includes the correct `dir` attribute for the active language (Andreas Bernacca)
 * Fix: Fix type error when using `--chunk_size` argument on `./manage.py update_index` (Seb Brown)
 * Fix: Avoid rendering entire form in EditHandler's `repr` method (Alex Tomkins)
 * Fix: Add empty alt attributes to HTML output of Embedly and oEmbed embed finders (Andreas Bernacca)
 * Fix: Add empty alt attributes to all images in the CMS admin (Andreas Bernacca)
 * Fix: Make URL generator preview image alt translateable (Thibaud Colas)
 * Fix: Clear pending AJAX request if error occurs on page chooser (Matt Westcott)
 * Fix: Prevent text from overlapping in focal point editing UI (Beth Menzies)
 * Fix: Screen readers now announce "Dashboard" for the main nav’s logo link instead of Wagtail’s version number (Thibaud Colas)
 * Fix: Screen readers now treat page-level action dropdowns as navigation instead of menus (Helen Chapman)